--- a/CookPopularControl/Themes/ToolTipStyle.xaml
+++ b/CookPopularControl/Themes/ToolTipStyle.xaml
@@ -15,7 +15,7 @@
                 <ControlTemplate TargetType="{x:Type ToolTip}">
                     <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
                             CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}" Background="{TemplateBinding Background}">
-                        <ContentPresenter Margin="10,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
