--- a/CookPopularControl/Skins/DefaultPopularColor.xaml
+++ b/CookPopularControl/Skins/DefaultPopularColor.xaml
@@ -3,10 +3,11 @@
 
     <SolidColorBrush x:Key="PrimaryColorTheme" Color="	#1E90FF"/>
     <SolidColorBrush x:Key="AssistantColorTheme" Color="#FF5722"/>
-    <SolidColorBrush x:Key="PrimaryForeground" Color="#6C6C6C"/>
+    <SolidColorBrush x:Key="PrimaryForeground" Color="#4A4A4A"/>
     <SolidColorBrush x:Key="AssistantForeground" Color="#FFFFFF"/>
-
-
+    
+    
+    <SolidColorBrush x:Key="BlockColor" Color="#664A4A4A"/>
     <LinearGradientBrush x:Key="LinearTheme" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
             <GradientStop Offset="0" Color="#FFFFFFFF"/>
