--- a/CookPopularControl/Themes/ToolTipStyle.xaml
+++ b/CookPopularControl/Themes/ToolTipStyle.xaml
@@ -8,6 +8,7 @@
         <Setter Property="Placement" Value="Mouse" />
         <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
         <Setter Property="Background" Value="{DynamicResource PrimaryColorTheme}" />
+        <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="5" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToolTip}">
