--- a/CookPopularControl/Themes/ButtonStyle.xaml
+++ b/CookPopularControl/Themes/ButtonStyle.xaml
@@ -1,10 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ctl="clr-namespace:CookPopularControl.Controls"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
+                    xmlns:ripple="clr-namespace:CookPopularControl.Controls.Ripple"
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Backcolors/DefaultPopularColor.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/GeometryFigure.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/ValueConverter.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/FontFamily.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/EffectShadow.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/SystemConstValue.xaml"/>
@@ -15,23 +18,47 @@
         <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
         <Setter Property="BorderBrush" Value="{DynamicResource PrimaryColorTheme}" />
         <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="Effect" Value="{StaticResource CustomShadowDepth1}" />
+        <Setter Property="ripple:RippleAssist.Feedback" Value="#FFFFFF" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="border" CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}"
-                            BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
-                            Background="{TemplateBinding Background}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-                        <DockPanel Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
-                            <Path x:Name="PART_ICON" Stretch="Uniform" SnapsToDevicePixels="True"
-                                  DockPanel.Dock="{TemplateBinding attached:ButtonBaseAttached.IconDirection}"
-                                  Width="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
-                                  Height="{TemplateBinding attached:FrameworkElementBaseAttached.IconHeight}"
-                                  Data="{TemplateBinding attached:FrameworkElementBaseAttached.IconGeometry}"
-                                  Fill="{TemplateBinding Foreground}"
-                                  Margin="{TemplateBinding attached:FrameworkElementBaseAttached.IconMargin}"/>
-                            <ContentPresenter VerticalAlignment="Center" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                        </DockPanel>
-                    </Border>
+                    <Grid>
+                        <AdornerDecorator CacheMode="{TemplateBinding CacheMode}">
+                            <Grid>
+                                <Border x:Name="border" CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}"
+                                        BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
+                                        Background="{TemplateBinding Background}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                        Effect="{TemplateBinding Effect}"/>
+                                <DockPanel Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
+                                    <Path x:Name="PART_ICON" Stretch="Uniform" SnapsToDevicePixels="True"
+                                          DockPanel.Dock="{TemplateBinding attached:ButtonBaseAttached.IconDirection}"
+                                          Width="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
+                                          Height="{TemplateBinding attached:FrameworkElementBaseAttached.IconHeight}"
+                                          Data="{TemplateBinding attached:FrameworkElementBaseAttached.IconGeometry}"
+                                          Fill="{TemplateBinding Foreground}"
+                                          Margin="{TemplateBinding attached:FrameworkElementBaseAttached.IconMargin}"/>
+                                    <ContentPresenter VerticalAlignment="Center" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                                </DockPanel>
+                            </Grid>
+                        </AdornerDecorator>
+                        <ripple:Ripple ContentTemplate="{TemplateBinding ContentTemplate}" Focusable="False"
+                                       ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                       HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                       VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                       Padding="{TemplateBinding Padding}"
+                                       SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                            <ripple:Ripple.Clip>
+                                <MultiBinding Converter="{StaticResource BorderClipConverter}">
+                                    <Binding ElementName="border" Path="ActualWidth" />
+                                    <Binding ElementName="border" Path="ActualHeight" />
+                                    <Binding ElementName="border" Path="CornerRadius" />
+                                    <Binding ElementName="border" Path="BorderThickness" />
+                                </MultiBinding>
+                            </ripple:Ripple.Clip>
+                        </ripple:Ripple>
+                    </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="border"/>
