--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<pc:ChromeWindow x:Class="TestDemo.MainWindow" 
+﻿<Window x:Class="TestDemo.MainWindow" 
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
                  xmlns:local="clr-namespace:TestDemo"
                  mc:Ignorable="d"
                  Title="MainWindow" Background="#FFFFFF" Foreground="DodgerBlue"
-                 Width="800" Height="450" Style="{StaticResource BaseChromeWindowStyle}">
+                 Width="800" Height="450" ><!--Style="{StaticResource BaseChromeWindowStyle}"-->
 
     <Window.Resources>
         <ResourceDictionary>
@@ -22,8 +22,8 @@
 
     <Grid>
         <local:ButtonDemo/>
-
+        <!--<Button Content="我是Chance" Width="300" Height="60"/>-->
     </Grid>
 
 
-</pc:ChromeWindow>
+</Window>
