--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -21,8 +21,8 @@
     </Window.Resources>
 
     <Grid>
-        <local:ButtonDemo/>
-        <!--<Button Content="我是Chance" Width="300" Height="60"/>-->
+        <!--<local:ButtonDemo/>-->
+        <CheckBox Content="我是Chance" Width="300" Height="60"/>
     </Grid>
 
 
