Add Gif Function Button(gif Image)

--- a/CookPopularControl/Resources/Dictionaries/SystemConstValue.xaml
+++ b/CookPopularControl/Resources/Dictionaries/SystemConstValue.xaml
@@ -5,5 +5,8 @@
     <sys:Double x:Key="LittleFontSize">10</sys:Double>
     <sys:Double x:Key="DefaultFontSize">14</sys:Double>
     <sys:Double x:Key="LargeFontSize">16</sys:Double>
+
+    <sys:Double x:Key="Double26Value">26</sys:Double>
+    <sys:Double x:Key="Double30Value">30</sys:Double>
     
 </ResourceDictionary>
