--- a/CookPopularControl/Themes/ButtonStyle.xaml
+++ b/CookPopularControl/Themes/ButtonStyle.xaml
@@ -1,22 +1,49 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:buttonassist="clr-namespace:CookPopularControl.Controls.Button">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ButtonBaseStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="ContentWithIconButtonStyle" TargetType="{x:Type ButtonBase}" BasedOn="{StaticResource BaseButtonBaseStyle}">
-        <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="20" />
-        <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="20" />
-        <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="10,0,0,0" />
-    </Style>
 
-    <Style x:Key="DefaultButtonStyle" TargetType="{x:Type ButtonBase}" BasedOn="{StaticResource BaseButtonBaseStyle}">
+    <Style x:Key="DefaultButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonBaseStyle}">
         <Setter Property="attached:FrameworkElementBaseAttached.IconGeometry" Value="{x:Null}" />
-        <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="0" />
-        <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="0" />
         <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="0" />
     </Style>
-    
+
+    <Style x:Key="ContentWithIconButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonBaseStyle}">
+        <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="{StaticResource Double26Value}" />
+        <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="{StaticResource Double26Value}" />
+    </Style>
+
+    <Style x:Key="IconButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonBaseStyle}">
+        <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="0" />
+        <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="{StaticResource Double26Value}" />
+        <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="{StaticResource Double26Value}" />
+    </Style>
+
+    <Style x:Key="IconTransparentButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource IconButtonStyle}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="attached:ButtonBaseAttached.ButtonBaseMouseOverBackground" Value="Transparent"/>
+        <Setter Property="attached:ButtonBaseAttached.ButtonBasePressBackground" Value="Transparent"/>
+    </Style>
+
+    <Style x:Key="ContentWithGifButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonBaseStyle}">
+        <Setter Property="attached:FrameworkElementBaseAttached.IconGeometry" Value="{x:Null}" />
+        <Setter Property="buttonassist:ButtonAssist.GifWidth" Value="{StaticResource Double30Value}"/>
+        <Setter Property="buttonassist:ButtonAssist.GifHeight" Value="{StaticResource Double30Value}"/>
+    </Style>
+
+    <Style x:Key="GifButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource ContentWithGifButtonStyle}">
+        <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="0" />
+    </Style>
+
+    <Style x:Key="GifTransparentButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource GifButtonStyle}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="attached:ButtonBaseAttached.ButtonBaseMouseOverBackground" Value="Transparent"/>
+        <Setter Property="attached:ButtonBaseAttached.ButtonBasePressBackground" Value="Transparent"/>
+    </Style>
+
 </ResourceDictionary>
