--- a/TestDemo/ButtonDemo.xaml
+++ b/TestDemo/ButtonDemo.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"              
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
+             xmlns:gif="http://wpfanimatedgif.codeplex.com"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -13,37 +14,65 @@
             <Setter Property="Height" Value="60" />
             <Setter Property="FontSize" Value="20" />
             <Setter Property="FontFamily" Value="{StaticResource RobotoFonts}" />
-            <Setter Property="Content" Value="IconWithContentButton" />
+            <Setter Property="Content" Value="ContentWithIconButton" />
             <Setter Property="pc:FrameworkElementBaseAttached.IconGeometry" Value="{StaticResource SuccessGeometry}" />
         </Style>
     </UserControl.Resources>
 
-    <StackPanel VerticalAlignment="Center">
-        <WrapPanel HorizontalAlignment="Center">
-            <Button Style="{StaticResource ButtonStyles}"
-                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
-                    pc:ButtonBaseAttached.IconDirection="Left"
-                    pc:FrameworkElementBaseAttached.IconMargin="0,0,5,0"
-                    pc:FrameworkElementBaseAttached.CornerRadius="5"/>
-            <Button Style="{StaticResource ButtonStyles}" Margin="10,0,0,0"
-                    pc:ButtonBaseAttached.IconDirection="Right"
-                    pc:FrameworkElementBaseAttached.IconMargin="15,0,0,0"/>
-            <Button Style="{StaticResource ButtonStyles}" Margin="0,10,0,0"
-                    pc:ButtonBaseAttached.IconDirection="Top"
-                    pc:FrameworkElementBaseAttached.IconMargin="0,0,0,15"/>
-            <Button Style="{StaticResource ButtonStyles}" Margin="10,10,0,0"
-                    pc:ButtonBaseAttached.IconDirection="Bottom"
-                    pc:FrameworkElementBaseAttached.IconMargin="0,5,0,0"/>
-        </WrapPanel>
+    <ScrollViewer>
+        <StackPanel VerticalAlignment="Center">
+            <WrapPanel HorizontalAlignment="Center">
+                <Button Style="{StaticResource ButtonStyles}"
+                        HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
+                        pc:FrameworkElementBaseAttached.IconDirection="Left"
+                        pc:FrameworkElementBaseAttached.IconMargin="5,0,0,0"
+                        pc:FrameworkElementBaseAttached.CornerRadius="5"/>
+                <Button Style="{StaticResource ButtonStyles}" Margin="10,0,0,0"
+                        pc:FrameworkElementBaseAttached.IconDirection="Right"
+                        pc:FrameworkElementBaseAttached.IconMargin="0,0,15,0"/>
+                <Button Style="{StaticResource ButtonStyles}" Margin="0,10,0,0"
+                        pc:FrameworkElementBaseAttached.IconDirection="Top"
+                        pc:FrameworkElementBaseAttached.IconMargin="0,0,0,0"/>
+                <Button Style="{StaticResource ButtonStyles}" Margin="10,10,0,0"
+                        pc:FrameworkElementBaseAttached.IconDirection="Bottom"
+                        pc:FrameworkElementBaseAttached.IconMargin="0,0,0,10"/>
+            </WrapPanel>
 
-        <Button Width="300" Height="60" Content="DefaultButton" FontSize="20" Margin="0,20,0,0"/>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
-            <TextBlock Text="OnlyIconButton" FontSize="20" FontFamily="{StaticResource RobotoFonts}" VerticalAlignment="Center"/>
-            <Button Width="300" Height="60" FontSize="20" Margin="20,0,155,0"
-                    pc:FrameworkElementBaseAttached.IconWidth="30"
-                    pc:FrameworkElementBaseAttached.IconHeight="30"
-                    pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource SuccessGeometry}"/>
+            <WrapPanel HorizontalAlignment="Center" Margin="0,20,0,0">
+                <Button Width="200" Height="60" Content="DefaultButton" FontSize="20" 
+                        Style="{StaticResource DefaultButtonStyle}"/>
+                <Button Width="50" Height="60" Margin="20,0"
+                        pc:FrameworkElementBaseAttached.IconWidth="30"
+                        pc:FrameworkElementBaseAttached.IconHeight="30"
+                        pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource SuccessGeometry}"
+                        Style="{StaticResource IconButtonStyle}"/>
+                <Button Height="32"
+                        pc:FrameworkElementBaseAttached.IconWidth="30"
+                        pc:FrameworkElementBaseAttached.IconHeight="30"
+                        pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource SuccessGeometry}"
+                        Style="{StaticResource IconTransparentButtonStyle}"/>
+            </WrapPanel>
+
+            <WrapPanel HorizontalAlignment="Center" Margin="0,20,0,0">
+                <Button Width="320" Height="200" Content="ContentWithGifButton" FontSize="20"
+                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif"
+                        pc:ButtonAssist.GifWidth="50"
+                        pc:ButtonAssist.GifHeight="50"
+                        pc:FrameworkElementBaseAttached.IconMargin="0,0,10,0"
+                        Style="{StaticResource ContentWithGifButtonStyle}"/>
+                <Button Width="200" Height="200" Margin="20,0"
+                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif"
+                        pc:ButtonAssist.GifWidth="100"
+                        pc:ButtonAssist.GifHeight="100"
+                        Style="{StaticResource GifButtonStyle}"/>
+                <Button Width="110" Height="50"
+                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif"
+                        pc:ButtonAssist.GifWidth="100"
+                        pc:ButtonAssist.GifHeight="100"
+                        Style="{StaticResource GifTransparentButtonStyle}"/>
+            </WrapPanel>
+            
         </StackPanel>
-    </StackPanel>
+    </ScrollViewer>
 
 </UserControl>
