--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -1,28 +1,39 @@
-﻿<Window x:Class="TestDemo.MainWindow" 
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                 xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
-                 xmlns:local="clr-namespace:TestDemo"
-                 mc:Ignorable="d"
-                 Title="MainWindow" Background="#FFFFFF" Foreground="DodgerBlue"
-                 Width="800" Height="450" ><!--Style="{StaticResource BaseChromeWindowStyle}"-->
+﻿<Window x:Class="TestDemo.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:TestDemo"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com"
+        Title="MainWindow"
+        mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
+        Width="800"
+        Height="800"
+        Foreground="DodgerBlue"
+        Background="#FFFFFF">
+    <!--  Style="{StaticResource BaseChromeWindowStyle}"  -->
 
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="D:\WPFSourceCode\CookPopularControl\CookPopularControl\Resources\Dictionaries\GeometryFigure.xaml"/>
+                <ResourceDictionary Source="D:\WPFSourceCode\CookPopularControl\CookPopularControl\Resources\Dictionaries\GeometryFigure.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <Style x:Key="ButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
+            <Style x:Key="ButtonStyle"
+                   BasedOn="{StaticResource {x:Type Button}}"
+                   TargetType="{x:Type Button}">
                 <Setter Property="Background" Value="Red" />
             </Style>
         </ResourceDictionary>
     </Window.Resources>
 
     <Grid>
-        <!--<local:ButtonDemo/>-->
-        <CheckBox Content="我是Chance" Width="300" Height="60"/>
+        <local:ButtonDemo />
+        <!--<Image gif:ImageBehavior.AnimatedSource="/Resources/Gif/programmer.gif"
+               gif:ImageBehavior.AnimationSpeedRatio="10"
+               Width="100" Height="100" />-->
+        <!--<CheckBox Content="我是Chance" Width="300" Height="60"/>-->
     </Grid>
 
 
